# gig-guide

./: .gitignore  century.py  moshtix.py  pyproject.toml  sydney-opera-house.py
gig_guide/: century.py  compile_data.py  compile_tables.py  database.py  email_funcs.py  main.py  message.py  moshtix.py  moshtix_urls.py  phoenix.py  soh.py  sydney-opera-house.py
